# oellm-cli

./: .gitignore  README.md  eval_job.sh  pyproject.toml  requirements-venv-dclm.txt  requirements-venv-evalchemy.txt
.github/workflows/: build-and-push-apptainer.yml
containers/: jupiter.def  snellius.def
docs/: TASKS.md  VENV.md
oellm/: main.py  task_groups.py  utils.py
oellm/resources/: clusters.yaml  task-groups.yaml  template.sbatch
oellm/resources/custom_lm_eval_tasks/: global_mgsm_am.yaml  global_mgsm_ar.yaml  global_mgsm_bn.yaml  global_mgsm_ca.yaml  global_mgsm_cs.yaml  global_mgsm_cy.yaml  global_mgsm_de.yaml  global_mgsm_el.yaml  global_mgsm_en.yaml  global_mgsm_es.yaml  global_mgsm_eu.yaml  global_mgsm_fr.yaml  global_mgsm_gl.yaml  global_mgsm_gu.yaml  global_mgsm_ha.yaml  global_mgsm_hu.yaml  global_mgsm_ja.yaml  global_mgsm_km.yaml  global_mgsm_kn.yaml  global_mgsm_ko.yaml  global_mgsm_ky.yaml  global_mgsm_lg.yaml  global_mgsm_my.yaml  global_mgsm_ne.yaml  global_mgsm_ru.yaml  global_mgsm_si.yaml  global_mgsm_sn.yaml  global_mgsm_sr.yaml  global_mgsm_st.yaml  global_mgsm_sw.yaml  global_mgsm_ta.yaml  global_mgsm_te.yaml  global_mgsm_th.yaml  global_mgsm_ur.yaml  global_mgsm_uz.yaml  global_mgsm_vi.yaml  global_mgsm_wo.yaml  global_mgsm_xh.yaml  global_mgsm_yo.yaml  global_mgsm_zh.yaml  (+5 more)
tests/: test_schedule_evals.py  test_utils.py
